fix: contrast problems with white bg

--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -2,7 +2,7 @@
   min-width: 400px;
   max-width: 400px;
   border-radius: 15px;
-  background-color: #ffffff;
+  background-color: #f1f1f1;
 }
 
 .content {
