--- a/src/components/forms/SignUpForm/SignUpForm.module.scss
+++ b/src/components/forms/SignUpForm/SignUpForm.module.scss
@@ -11,7 +11,8 @@
   padding: 10px 15px;
   width: 100%;
   border-radius: 5px;
-  border: none;
+  border: solid 1px #d3d3d3;
+  background-color: #f1f1f1;
 
   &:disabled {
     color: $disabled;
